# miniBitcoin

./: .gitignore  CMakeLists.txt  MiniBitcoin  README.md
include/blockchain/: block.hpp  blockchain.hpp
include/common/: common.hpp
src/: main.cpp
src/blockchain/: block.cpp  blockchain.cpp
src/common/: common.cpp
tests/: block_test.cpp
